# ChangeLog for media-gfx/xloadimage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xloadimage/ChangeLog,v 1.51 2010/03/10 17:37:06 ssuominen Exp $

  10 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  xloadimage-4.1-r10.ebuild:
  Fix building with libpng14.

  22 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  xloadimage-4.1-r10.ebuild:
  Require SLOT="0" of media-libs/jpeg for headers.

  27 Sep 2009; nixnut <nixnut@gentoo.org> xloadimage-4.1-r10.ebuild:
  ppc stable #283648

  22 Sep 2009; Jeroen Roovers <jer@gentoo.org> xloadimage-4.1-r10.ebuild:
  Stable for HPPA (bug #283648).

  12 Sep 2009; Raúl Porcel <armin76@gentoo.org> xloadimage-4.1-r10.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #283648

  09 Sep 2009; Markus Meier <maekke@gentoo.org> xloadimage-4.1-r10.ebuild:
  amd64/x86 stable, bug #283648

  06 Sep 2009; Brent Baude <ranger@gentoo.org> xloadimage-4.1-r10.ebuild:
  Marking xloadimage-4.1-r10 ppc64 for bug 283648

  04 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  xloadimage-4.1-r10.ebuild, +files/xloadimage-4.1-ldflags_and_exit.patch:
  Include stdlib.h for exit(3) and respect LDFLAGS when building uufilter
  binary.

*xloadimage-4.1-r10 (04 Sep 2009)

  04 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  +xloadimage-4.1-r10.ebuild:
  Stop using internal ecompress function.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/xloadimage-4.1-unaligned-access.patch:
  Fix patch with absolute paths.

  15 Jan 2008; Fabian Groffen <grobian@gentoo.org> xloadimage-4.1-r4.ebuild,
  xloadimage-4.1-r5.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Jul 2007; David Shakaryan <omp@gentoo.org> xloadimage-4.1-r4.ebuild:
  Remove virtual/x11 from dependencies.

*xloadimage-4.1-r5 (14 May 2007)

  14 May 2007; Samuli Suominen <drac@gentoo.org>
  +files/xloadimage-4.1-unaligned-access.patch, +xloadimage-4.1-r5.ebuild: