@@ -4,8 +4,10 @@ AUX xloadimage-4.1-ldflags_and_exit.patch 775 RMD160 d7b44f8658d2e58aedf26c25c40
 AUX xloadimage-4.1-unaligned-access.patch 1730 RMD160 31d77d46308db7e1a44e391922db385217227281 SHA1 0fd44ef9e54c59884575f589a97c20cec7ec7657 SHA256 35548e5242d32f66e7175c090af4b2df5ee6f20f51d7e7f83a9f430af568f6c9
 AUX xloadimage-4.1-zio-shell-meta-char.diff 1372 RMD160 bdff2a42743659179ff9faaf7d2451d3d2c94678 SHA1 4ac943a7b4eb78d65577838b910628fa14fb84e6 SHA256 253064f5eebcd6c1c318b9637f1010657927b5f65be59581ef37523a50f3601e
 AUX xloadimage-gentoo.patch 8956 RMD160 f60ed7543ae72a598d37d665d2fd1b3e000a69c2 SHA1 4fa12fa375187f04f5f71dafe7b02b858273b050 SHA256 e03f0584b32a0be68f7baeb13df2ad29277ecdbb54baed0b5f878301122e0c30
+DIST xloadimage-4.1-gentoo-r1.diff.bz2 41535 RMD160 57f09f43e96fea7c103cd283aaea35245a44071a SHA1 2b577a1c230a99201a2cb48ba4b5d122f34da3c7 SHA256 addfd04c0a5667bb9c3f4ae6a9da35a443776086e30b84b2c3afa5eac161144a
 DIST xloadimage-4.1-gentoo.diff.bz2 41390 RMD160 63b160b968937d8c580c7876137263bdbaaa575d SHA1 6436b03b74429470b5491870706885dd7fe69f63 SHA256 dae93c4bd2955810252ff4dd5650386c34f82db8a7a1502c653bf965dad1632a
 DIST xloadimage.4.1.tar.gz 596021 RMD160 000271b40f58601cd1057b4e99c31a30da6e10af SHA1 0a8ee9b185702750706f68e4a34e086873f17690 SHA256 400bc7d84dcfb3265a7a1ce51819679dc3adaeda231514bd89b0f932b78ff5c4
 EBUILD xloadimage-4.1-r10.ebuild 2246 RMD160 b6465c92a6db04a7a80cf708dcefb68f27db1dc2 SHA1 553d6e39360aa32c47d78a69e7cd57c864efda1e SHA256 db7d52e543e0974086dfff7a541e4325b9f97e7a3c0c237ee370ba8f277bd090
-MISC ChangeLog 8333 RMD160 924d27324564cbb844662491f84f9bd1f95fe140 SHA1 689aec2262e8a796bde0dc925e9b10ed0505e9ea SHA256 d14c01cf7c18dc0435cbb05ea14667260802154e791416002867d71c4cec8341
+EBUILD xloadimage-4.1-r11.ebuild 2333 RMD160 3f47629245b1a8bb151752335720b5d703cd1672 SHA1 4b8846401a4b6482788a10bf01f0a86ef302d520 SHA256 43986b8ca814fc72cee6d26e33773faf41183f44b16aec9b0460bcc1ba05530e
+MISC ChangeLog 8503 RMD160 f41e8ac5dd9618c0b3c4f05bcfcfc66f29d0af78 SHA1 bd4757279e8c169667acd3b8b11aea455c560358 SHA256 1adbd8eff043242adc117287f8884b2ac93a7b0f569394f8627b579f0f6ddf87
 MISC metadata.xml 163 RMD160 9cdda004bed83a887f4a756cb1550fab6ce563ce SHA1 bfc4f31690e338a159152dcd46d56ff7fd6b6e1b SHA256 212655100c50c4193072996553f15984b9788fb20fb4175efd2418b80d428564
