@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/xloadimage
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xloadimage/ChangeLog,v 1.51 2010/03/10 17:37:06 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xloadimage/ChangeLog,v 1.52 2010/05/30 10:13:02 xarthisius Exp $
+
+*xloadimage-4.1-r11 (29 May 2010)
+
+  29 May 2010; Kacper Kowalik <xarthisius@gentoo.org>
+  +xloadimage-4.1-r11.ebuild:
+  Removing automagic dependencies wrt bug 321995
 
   10 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
   xloadimage-4.1-r10.ebuild:
